--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 body {
   background-color: var(--background-color);
   color: var(--text-color);
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'New Century Schoolbook', 'Helvetica Neue', Arial, sans-serif;
 }
 
 .app {
